--- a/presentation.html
+++ b/presentation.html
@@ -41,12 +41,12 @@
 	
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='../fig/fig2.png' data-background-transition='zoom'>
+				<section data-background='https://github.com/YihanCao123/Presentation/blob/master/fig/fig2.png' data-background-transition='zoom'>
 					<h2>Why Animal Crossing Is the Game for the Coronavirus Moment</h2>
 					<p class='fragment'>By: Group ?</p>
-					<audio src="./audio/audio1.mp3" id="aud" autoplay="autoplay" controls="controls" preload="auto"></audio>
+					<audio src="/audio/audio1.mp3" id="aud" autoplay="autoplay" controls="controls" preload="auto"></audio>
 				</section>
-				<section data-background='../fig/fig2.png' data-markdown data-background-transition='zoom'>
+				<section data-background='/fig/fig2.png' data-markdown data-background-transition='zoom'>
 					### Today's Agenda
 					* An Introduction to Animal Crossing
 					* Logic Framework
