--- a/presentation.html
+++ b/presentation.html
@@ -41,7 +41,9 @@
 	
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-
+				<section>
+					<h1>（这是广告）制作不易啊！球球各位投我们一票啦！</h1>	
+				</section>
 				<section data-background='./fig/fig2.png' data-background-transition='zoom'>
 					<h2>Why Animal Crossing Is the Game for the Coronavirus Moment</h2>
 					<p class='fragment'>By: Group ?</p>
